# suzuri

./: CHANGELOG.md  Cargo.toml  LICENSE.md  README.md
data/: overrides.sql
src/: db.rs  handle_json.rs  handle_query.rs  main.rs  msgs.rs
