[package]
name = "suzuri"
version = "0.1.0"
edition = "2024"
description ="A CLI-based Japanese dictionary using the Jisho API"

[dependencies]
clap = { version = "4", features = ["derive"] }
curl = { version = "0.4.50", features = ["static-curl", "static-ssl"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
